--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello everyone</h1>
-<p>I'm hosted with neletshavebradnowwness</p>
+<h1>ShadowPride</h1>
+<p>wrestle with pride</p>
+<p>28.6.2025</p>
 </body>
 </html>
