--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>ShadowPride</h1>
-<p>wrestle with pride</p>
-<p>28.6.2025</p>
+
+<head>
+<style>
+    body {
+  background-color: rgb(59, 255, 55);
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  from {background-color: rgb(59, 255, 55);}
+  to {background-color: rgb(255, 0, 187);}
+}
+
+h1 {
+  color: white;
+  text-shadow: 5px 5px 2px rgb(157, 0, 255), 0 0 25px #ff00f2, 0 0 5px rgb(255, 0, 217);
+}
+.help {cursor: help;}
+
+p {animation: color-change 1s infinite;
+    }
+
+    @keyframes color-change {  0% { color: red; }
+  50% { color: blue; }
+  100% { color: red; }
+
+</style>
+</head>
+</body>
+
+<body>
+<h1>SHADOWPRIDE</h1>
+<h1>SAVE THE DATE</h1>
+<h1>28.6.2025</h1>
+<p class="help">WHAT IS GOING ON HERE?</p>
+<span style='font-size:100px;'>&#128052;</span>
+<span style='font-size:100px;'>&#127905;</span>
+
 </body>
 </html>
