--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ h1 {
   text-shadow: 5px 5px 2px rgb(157, 0, 255), 0 0 25px #ff00f2, 0 0 5px rgb(255, 0, 217);
 }
 .help {cursor: help;}
+.grabbing {cursor: -webkit-grabbing; cursor: grabbing;}
 
 p {animation: color-change 1s infinite;
     }
@@ -32,12 +33,19 @@ p {animation: color-change 1s infinite;
 </body>
 
 <body>
-<h1>SHADOWPRIDE</h1>
+<h1>ShadowPRIDE</h1>
 <h1>SAVE THE DATE</h1>
 <h1>28.6.2025</h1>
 <p class="help">WHAT IS GOING ON HERE?</p>
-<span style='font-size:100px;'>&#128052;</span>
-<span style='font-size:100px;'>&#127905;</span>
+<p class="grabbing">RISE UP FOR LIBERATION</p>
+<a href="https://www.instagram.com/motionaljoyride/">This is a link</a>
+<p <span style='font-size:100px;'>&#128052;</span>
+<span style='font-size:100px;'>&#127905;</span> </p>
+
+<picture>
+<img src="photo_2025-06-01 22.33.22.jpeg" alt="liberation" width="400" height="500">
+<img src="2025-06-01 22.30.13.jpg" alt="plushie" width="400" height="500">
+</picture>
 
 </body>
 </html>
