--- a/index.html
+++ b/index.html
@@ -1,9 +1,79 @@
 <!DOCTYPE html>
 <html>
 <body>
-
 <head>
 <style>
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+}
+
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0);
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #3cff00;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #ee00ff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #f2ff00;
+  color: rgb(140, 0, 255);
+}
+
+.leftcolumn {   
+  float: center;
+  width: 75%;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: rgb(255, 0, 234);
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
     body {
   background-color: rgb(59, 255, 55);
   animation: mymove 5s infinite;
@@ -12,6 +82,10 @@
 @keyframes mymove {
   from {background-color: rgb(59, 255, 55);}
   to {background-color: rgb(255, 0, 187);}
+}
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
 }
 
 h1 {
@@ -24,28 +98,42 @@ h1 {
 p {animation: color-change 1s infinite;
     }
 
-    @keyframes color-change {  0% { color: red; }
-  50% { color: blue; }
-  100% { color: red; }
+@keyframes color-change {  0% { color: red; }
+50% { color: blue; }
+100% { color: red; }
 
 </style>
 </head>
 </body>
 
 <body>
-<h1>ShadowPRIDE</h1>
-<h1>SAVE THE DATE</h1>
-<h1>28.6.2025</h1>
-<p class="help">WHAT IS GOING ON HERE?</p>
-<p class="grabbing">RISE UP FOR LIBERATION</p>
-<a href="https://www.instagram.com/motionaljoyride/">This is a link</a>
-<p <span style='font-size:100px;'>&#128052;</span>
-<span style='font-size:100px;'>&#127905;</span> </p>
 
-<picture>
+<div class="header">
+<H1><p class="grabbing">RISE UP FOR LIBERATION</p></H1>
+<h1>SAVE THE DATE</h1>
+<h1><p class="p3">shadowPRIDE 2025</p></h1>
+<h1><p class="p3">Sat 28 June</p></h1>
+<h1>WE ARE CHAOTICALLY QUEER</h1>
+<h1>INFO COMING WHEN WE HAVE IT</h1>
+</div>
+
+<div class="topnav">
+<a href="https://www.instagram.com/motionaljoyride/">IG</a>
+ <a href="https://www.instagram.com/motionaljoyride/">ALSO IG</a>
+ <a href="https://www.instagram.com/motionaljoyride/">SOMETHING ELSE? NO ALSO IG</a>
+<a href="https://www.instagram.com/motionaljoyride/" style="float:right">IG BUT TO THE LEFT</a>
+</div>
+
 <img src="photo_2025-06-01 22.33.22.jpeg" alt="liberation" width="400" height="500">
 <img src="2025-06-01 22.30.13.jpg" alt="plushie" width="400" height="500">
-</picture>
+<img src="photo_2025-06-03 04.40.17.jpeg" alt="acab" width="400" height="500">
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>FROM STONEWALL TO PALESTINE</h2>
+      <p2>Here we can write something?</p2>
+    </div>
 
 </body>
 </html>
