--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ p {animation: color-change 1s infinite;
 <img src="photo_2025-06-01 22.33.22.jpeg" alt="liberation" width="400" height="500">
 <img src="2025-06-01 22.30.13.jpg" alt="plushie" width="400" height="500">
 <img src="photo_2025-06-03 04.40.17.jpeg" alt="acab" width="400" height="500">
+<img src="photo_2025-06-03 05.06.08.jpeg" alt="dancefloor healing" width="400" height="500">
 
 <div class="row">
   <div class="leftcolumn">
