--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ p {animation: color-change 1s infinite;
   <div class="leftcolumn">
     <div class="card">
       <h2>FROM STONEWALL TO PALESTINE</h2>
-      <p2>Here we can write something?</p2>
+      <p2>No pride in genocide!</p2>
     </div>
 
 </body>
