--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ p {animation: color-change 1s infinite;
 </div>
 
 <div class="topnav">
-<a href="https://www.instagram.com/motionaljoyride/">IG</a>
- <a href="https://www.instagram.com/motionaljoyride/">ALSO IG</a>
- <a href="https://www.instagram.com/motionaljoyride/">SOMETHING ELSE? NO ALSO IG</a>
-<a href="https://www.instagram.com/motionaljoyride/" style="float:right">IG BUT TO THE LEFT</a>
+<a href="https://t.me/+oFe79WH991A2MDc0">TELEGRAM</a>
+ <a href="https://t.me/+oFe79WH991A2MDc0">ALSO TELEGRAM</a>
+ <a href="https://t.me/+oFe79WH991A2MDc0">SOMETHING ELSE? NO, JUST JOIN THE TELEGRAM</a>
+<a href="https://www.instagram.com/motionaljoyride/" style="float:right">WE'RE TRYING TO LEAVE META BUT IN THE MEANTIME HERE IS THE IG</a>
 </div>
 
 <img src="photo_2025-06-01 22.33.22.jpeg" alt="liberation" width="400" height="500">
