--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ p {animation: color-change 1s infinite;
 <h1>SAVE THE DATE</h1>
 <h1><p class="p3">shadowPRIDE 2025</p></h1>
 <h1><p class="p3">Sat 28 June</p></h1>
+<h1><p class="p3">Location TBA</p></h1>
 <h1>WE ARE CHAOTICALLY QUEER</h1>
 <h1>INFO COMING WHEN WE HAVE IT</h1>
 </div>
